--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -3,6 +3,8 @@ ul {
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 1rem;
     list-style-type: none;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 header {
