--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -1,3 +1,7 @@
+a {
+    text-decoration: none;
+}
+
 .card {
     border: 1px solid #E2E2E2;
     border-radius: .5rem;
@@ -45,7 +49,7 @@
     line-height: 1.5;
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-    color: #666666;
+    color: #464444;
     margin-bottom: 0;
     display: -webkit-box;
     -webkit-line-clamp: 3;
@@ -61,16 +65,19 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    font-size: 0.9rem;
 }
 
 .date {
-    margin: 0;
+    margin: 0; 
+    color: grey;
     padding-left: .75rem;
     padding-top: .4rem;
 }
 
 .source {
     margin: 0;
+    color: grey;
     padding-right: 1rem;
     padding-top: .4rem;
 }
